fix: add height layout issue

--- a/src/app/_lib/components/EmptyCart/EmptyCart.module.css
+++ b/src/app/_lib/components/EmptyCart/EmptyCart.module.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   align-items: center;
   justify-content:  center;
-  height: 100%;
+  height: calc(100vh - 15rem);
   margin: auto;
 }
 
