--- a/src/app/_pages/checkout/CheckoutPage.module.css
+++ b/src/app/_pages/checkout/CheckoutPage.module.css
@@ -4,7 +4,7 @@
   padding: 2.4rem;
   justify-content: center;
   background-color: var(--base-color);
-  height: calc(100% - 5rem);
+  min-height: calc(100% - 5rem);
 
   @media screen and (max-width: 1024px) {
     flex-direction: column;
@@ -13,6 +13,7 @@
   @media screen and (max-width: 768px) {
     gap: unset;
     padding: 0;
+    min-height: unset;
   }
 }
 
@@ -33,12 +34,13 @@
 .cartWrapper {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  min-height: 30rem;
   border-radius: 1rem;
   background: var(--primary-bg-color);
 
   @media screen and (max-width: 768px) {
     border-radius: unset;
+    min-height: unset;
   }
 }
 
