--- a/src/app/styles/typography.css
+++ b/src/app/styles/typography.css
@@ -5,6 +5,7 @@
   --secondary-bg-color: #000000;
   --dark-font-color: #000000;
   --light-font-color: #ffffff;
+  --highlight-font-color: #ee1414;
 
   /* Font Weights */
   --default-font-weight: 400;
@@ -27,8 +28,8 @@
   box-sizing: border-box;
 }
 
-body, html {
-  height: 100%;
+body {
+  height: 100vh;
   width: 100%;
   margin: 0;
   padding: 0;
